[package]
name = "animus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.0", features = ["serde"] }
keystone = { git = "https://github.com/Noxmore/keystone.git" }
lerp = { version = "0.4.0", features = ["derive"] }
uuid = "1.3.3"
