[package]
name = "animus"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Framework independent lightweight rust animation library"
homepage = "https://github.com/Noxmore/animus"
documentation = "https://docs.rs/animus"
repository = "https://github.com/Noxmore/animus"
readme = "README.md"
keywords = ["graphics", "animation"]
categories = ["graphics", "gui"]


[dependencies]
lerp = "0.4"
